# shader-rs-test

./: .gitignore  Cargo.toml  build.rs  rust-toolchain
shader/: Cargo.toml
shader/src/: lib.rs
src/: lib.rs  main.rs
