[package]
name = "shader-rs-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "shader"
path = "src/lib.rs"

[[bin]]
name = "run_shader"
path = "src/main.rs"


[dependencies]
anyhow = "1.0.79"
smol = "2.0.0"
clap = { version = "4.4.18", features = ["derive"] }
image = "0.24.8"
posh = { git = "https://github.com/wyvernbw/posh" }
glow = "0.13.1"
glutin = { git = "https://github.com/rust-windowing/glutin.git" }
glutin-winit = { git = "https://github.com/rust-windowing/glutin.git" }
raw-window-handle = "0.5.2"
winit = "0.29.10"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"


# Compile build-dependencies in release mode with
# the same settings as regular dependencies.
[profile.release.build-override]
opt-level = 3
codegen-units = 16
[profile.dev.build-override]
opt-level = 3
